--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://jaypapa.github.io/myreads-book-tracking/",
   "dependencies": {
     "escape-string-regexp": "^1.0.5",
     "prop-types": "^15.5.8",
@@ -14,6 +15,8 @@
     "mime": ">=1.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
